fix contact spacing and swap personal pics

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2812,11 +2812,12 @@ ul.contact {
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-end;
+  margin: 1.5em 0;
 }
 
 ul.contact li {
   text-decoration: none;
-  margin: 2.5em 0 0 0;
+  /* margin: 2.5em 0 0 0; */
   padding: 0 0 0 3.25em;
   position: relative;
 }
